--- a/src/css/style.css
+++ b/src/css/style.css
@@ -145,6 +145,46 @@ form label span {
 	place-items: center;
 	gap: 10px;
 }
+.main-explore{
+	display: grid;
+	place-items: center;
+}
+.explore{
+	width: 1200px;
+	margin-top: 25px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap:10px;
+}
+.explore-image-box{
+	width: inherit;
+	height: 500px;
+	background: #00000090;
+	display: grid;
+	place-items: center;
+	border-radius: 15px;
+	grid-template-columns: 1fr 2.5fr;
+
+}
+.explore-text,
+.explore-image{
+	display: grid;
+	place-items: center;
+}
+.explore-text{
+	padding-left: 20px;
+	font-size: x-large;
+}
+.explore-image-image{
+	width: 40%;
+	display: grid;
+	place-items: center;
+}
+
+.explore-image-image{
+	width: 50%;
+}
 
 .root-contact {
 	background-color: var(--background);
